--- a/LoadMoreAdapter/build.gradle
+++ b/LoadMoreAdapter/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 27
 
-
-
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 27
@@ -27,12 +25,12 @@ android {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:27.+'
-//    testApi 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.+'
+    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api 'com.android.support:recyclerview-v7:27.+'
+    implementation 'com.android.support:recyclerview-v7:27.+'
 }
 
 /*---------------项目编译失败无法运行，删除以下配置---------------*/
