--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".testload.TestLoadActivity"></activity>
-        <activity android:name=".test.TestAdapterActivity"></activity>
+        <activity android:name=".TestRangeItemActivity"></activity>
+        <activity android:name=".testload.TestLoadActivity" />
+        <activity android:name=".test.TestAdapterActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
