--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestRangeItemActivity"></activity>
+        <activity android:name=".expandable.ExpandableActivity"></activity>
+        <activity android:name=".TestRangeItemActivity" />
         <activity android:name=".testload.TestLoadActivity" />
         <activity android:name=".test.TestAdapterActivity" />
         <activity android:name=".MainActivity">
